# fin-tracker

./: .gitignore  README.md  pyproject.toml  run_script.sh
fintracker/: __init__.py  consts.py  executor.py  process_data.py  utils.py
resources/: instrument_info.csv  instrument_info2.csv  latest_performance.sql
