[tool.poetry]
name = "fin-tracker"
version = "0.1.0"
description = ""
authors = ["Dorian Beganovic"]
readme = "README.md"
#packages = [{include = "fin_tracker"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
duckdb = "0.10.0"
pandas = "^2.1.1"
yfinance = "^0.2.31"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
dask = {extras = ["distributed"], version = "^2023.12.1"}
bokeh = "^3.3.2"
ipycytoscape = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

